--- a/demo.html
+++ b/demo.html
@@ -71,6 +71,6 @@
     })('https://dev2.paradox.ai', 'bymzytjjduepcyvbqkbb');
 </script>
       <div id="content">
-   <iframe id="main-iframe" width="100%" height="100%" src="https://assets.topdev.vn/images/2021/03/11/galleryvzRrDSLwLwJGMVCfVDhnv9rNbgwQZysj-KQNbz.png" frameborder="0"> == $0
+        <Image  width="100%" height="100%" src="https://assets.topdev.vn/images/2021/03/11/galleryvzRrDSLwLwJGMVCfVDhnv9rNbgwQZysj-KQNbz.png">
   </body>
 </html>
