--- a/demo.html
+++ b/demo.html
@@ -65,11 +65,12 @@
         var apply = document.createElement('script');
         apply.type = 'text/javascript';
         apply.async = true;
-        apply.src = 'https://dawwjh1wd75jt.cloudfront.net/static/site/js/widget-client.js';
+        apply.src = 'https://d2cxf26suf1qae.cloudfront.net/static/site/js/widget-client.js';
         var s = document.getElementsByTagName('script')[0];
         s.parentNode.insertBefore(apply, s);
-    })('https://ltsstg.paradox.ai', 'glynjfswnxgasckcvyxg');
+    })('https://test.paradox.ai', 'zzogeppdkwyhglzrppyc');
 </script>
+    
       <div id="content">
        <image id="main-iframe" width="100%" height="100%" src="https://assets.topdev.vn/images/2021/03/11/galleryvzRrDSLwLwJGMVCfVDhnv9rNbgwQZysj-KQNbz.png">
   </body>
