--- a/lts-stg.html
+++ b/lts-stg.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Hang Le" />
      </head>
   <body>
-    <h1>Environment: </h1>
+    <h1>Environment: LTS-STG</h1>
 
     <table>
       <tr>
@@ -28,7 +28,7 @@
       </tr>
       <tr>
         <td>Company:</td>
-        <td>ParadoxVN - Hang dev2 Conversation
+        <td>P
 </td>
       </tr>
       <tr>
@@ -68,7 +68,7 @@
         apply.src = 'https://dawwjh1wd75jt.cloudfront.net/static/site/js/widget-client.js';
         var s = document.getElementsByTagName('script')[0];
         s.parentNode.insertBefore(apply, s);
-    })('https://ltsstg.paradox.ai', 'glynjfswnxgasckcvyxg');
+    })('https://ltsstg.paradox.ai', 'nojcvszkqyupzuffvpjm');
 </script>
     
       <div id="content">
