--- a/test.html
+++ b/test.html
@@ -11,28 +11,12 @@
 
     <table>
       <tr>
-        <td>Language:</td>
-        <td>
-          <select id="language" onchange="changeLanguage()">
-            <option value="en">English (en)</option>
-            <option value="en-US">English (en-US)</option>
-            <option value="ar">Arabic</option>
-            <option value="he">Hebrew</option>
-            <option value="ja">Japanese</option>
-            <option value="es">Spanish (es)</option>
-            <option value="ms">Malay (ms)</option>
-            <option value="fr">French (fr)</option>
-            <option value="fr-ca">French(Canada) (fr-ca)</option>
-          </select>
-        </td>
-      </tr>
-      <tr>
         <td>Company:</td>
         <td>ParadoxVN-Hang Conversation</td>
       </tr>
       <tr>
         <td>Widget name:</td>
-        <td>Hang Le Widget</td>
+        <td>Widget</td>
       </tr>
     </table>
     
