--- a/test-talent.html
+++ b/test-talent.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8" />
 
-    <title>Hang Hang</title>
+    <title>Hang Lee</title>
     <meta name="description" content="The HTML5 Herald" />
     <meta name="author" content="Hang Le" />
      </head>
@@ -12,7 +12,7 @@
     <table>
       <tr>
         <td>Company:</td>
-        <td>ParadoxVN-Hang Conversation</td>
+        <td>Paradox - lien: Job ON + Talent report</td>
       </tr>
       <tr>
         <td>Widget name:</td>
