--- a/test-talent.html
+++ b/test-talent.html
@@ -16,7 +16,7 @@
       </tr>
       <tr>
         <td>Widget name:</td>
-        <td>Widget</td>
+        <td>Hang Lee</td>
       </tr>
     </table>
     
