--- a/Test/widget.html
+++ b/Test/widget.html
@@ -51,7 +51,7 @@
         apply.src = 'https://d2cxf26suf1qae.cloudfront.net/static/site/js/widget-client.js';
         var s = document.getElementsByTagName('script')[0];
         s.parentNode.insertBefore(apply, s);
-    })('https://test.paradox.ai', 'dxxlucqwvhmvipntyphm');
+    })('https://test.paradox.ai', 'zzogeppdkwyhglzrppyc');
 </script>
     
       <div id="content">
