--- a/test.html
+++ b/test.html
@@ -12,7 +12,7 @@
     <table>
       <tr>
         <td>Company:</td>
-        <td>ParadoxVN-Hang Conversation</td>
+        <td>ParadoxVN-Hang Conversation Job</td>
       </tr>
       <tr>
         <td>Widget name:</td>
@@ -51,7 +51,7 @@
         apply.src = 'https://d2cxf26suf1qae.cloudfront.net/static/site/js/widget-client.js';
         var s = document.getElementsByTagName('script')[0];
         s.parentNode.insertBefore(apply, s);
-    })('https://test.paradox.ai', 'zzogeppdkwyhglzrppyc');
+    })('https://test.paradox.ai', 'dxxlucqwvhmvipntyphm');
 </script>
     
       <div id="content">
