--- a/paradox.html
+++ b/paradox.html
@@ -56,19 +56,19 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     <script type='text/javascript'>
-    (function(o,l) {
-        window.oliviaChatData = window.oliviaChatData || [];
-        window.oliviaChatBaseUrl = o;
-        window.oliviaChatData.push(['setKey', l]);
-        window.oliviaChatData.push(['start']);
-        var apply = document.createElement('script');
-        apply.type = 'text/javascript';
-        apply.async = true;
-        apply.src = 'https://dokumfe7mps0i.cloudfront.net/static/site/js/widget-client.js';
-        var s = document.getElementsByTagName('script')[0];
-        s.parentNode.insertBefore(apply, s);
-    })('https://olivia.paradox.ai', 'fmkpjlgxfdpyvfpsrhpi');
-</script>
+      (function(o,l) {
+          window.oliviaChatData = window.oliviaChatData || [];
+          window.oliviaChatBaseUrl = o;
+          window.oliviaChatData.push(['setKey', l]);
+          window.oliviaChatData.push(['start']);
+          var apply = document.createElement('script');
+          apply.type = 'text/javascript';
+          apply.async = true;
+          apply.src = 'https://dokumfe7mps0i.cloudfront.net/static/site/js/widget-client.js';
+          var s = document.getElementsByTagName('script')[0];
+          s.parentNode.insertBefore(apply, s);
+      })('https://olivia.paradox.ai', 'hnohvylgkluhagcokjxi');
+    </script>
       <div id="content">
       </div>
   </body>
