--- a/paradox.html
+++ b/paradox.html
@@ -28,11 +28,11 @@
       </tr>
       <tr>
         <td>Company:</td>
-        <td>ParadoxVN-Hang Conversation</td>
+        <td>ParadoxVN-Hang Conversation GDPR</td>
       </tr>
       <tr>
         <td>Widget name:</td>
-        <td>Hang Widget</td>
+        <td>Talent</td>
       </tr>
     </table>
     
