--- a/lts-stg.html
+++ b/lts-stg.html
@@ -28,11 +28,11 @@
       </tr>
       <tr>
         <td>Company:</td>
-        <td>ParadoxVN-Hang ltsstg Conversation</td>
+        <td>ParadoxVN-Hang lts regresstion</td>
       </tr>
       <tr>
         <td>Widget name:</td>
-        <td>Widget</td>
+        <td>Survey</td>
       </tr>
     </table>
     
@@ -67,7 +67,7 @@
             apply.src = 'https://dawwjh1wd75jt.cloudfront.net/static/site/js/widget-client.js';
             var s = document.getElementsByTagName('script')[0];
             s.parentNode.insertBefore(apply, s);
-        })('https://ltsstg.paradox.ai', 'eyybuodofhqmlvwvhpga');
+        })('https://ltsstg.paradox.ai', 'biojxczzevjimiicwldd');
     </script>
       <div id="content">
       </div>
