--- a/lts-stg.html
+++ b/lts-stg.html
@@ -57,17 +57,17 @@
 
     <script type='text/javascript'>
         (function(o,l) {
-            window.oliviaChatData = window.oliviaChatData || [];
-            window.oliviaChatBaseUrl = o;
-            window.oliviaChatData.push(['setKey', l]);
-            window.oliviaChatData.push(['start']);
-            var apply = document.createElement('script');
-            apply.type = 'text/javascript';
-            apply.async = true;
-            apply.src = 'https://dawwjh1wd75jt.cloudfront.net/static/site/js/widget-client.js';
-            var s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(apply, s);
-        })('https://ltsstg.paradox.ai', 'biojxczzevjimiicwldd');
+        window.oliviaChatData = window.oliviaChatData || [];
+        window.oliviaChatBaseUrl = o;
+        window.oliviaChatData.push(['setKey', l]);
+        window.oliviaChatData.push(['start']);
+        var apply = document.createElement('script');
+        apply.type = 'text/javascript';
+        apply.async = true;
+        apply.src = 'https://dawwjh1wd75jt.cloudfront.net/static/site/js/widget-client.js';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(apply, s);
+    })('https://ltsstg.paradox.ai', 'nojcvszkqyupzuffvpjm');
     </script>
       <div id="content">
       </div>
