--- a/lts/regrestion/lts-stg.html
+++ b/lts/regrestion/lts-stg.html
@@ -28,7 +28,7 @@
       </tr>
       <tr>
         <td>Company:</td>
-        <td>ParadoxVN-Hang lts regresstion</td>
+        <td>ParadoxVN-Hang lts regrestion</td>
       </tr>
       <tr>
         <td>Widget name:</td>
