--- a/lts/default-off.html
+++ b/lts/default-off.html
@@ -67,7 +67,7 @@
         apply.src = 'https://dawwjh1wd75jt.cloudfront.net/static/site/js/widget-client.js';
         var s = document.getElementsByTagName('script')[0];
         s.parentNode.insertBefore(apply, s);
-    })('https://ltsstg.paradox.ai', 'peofyiwzfgjllbhorybr');
+    })('https://ltsstg.paradox.ai', 'biojxczzevjimiicwldd');
 </script>
       <div id="content">
       </div>
