--- a/dev3/widget.html
+++ b/dev3/widget.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Hang Le" />
      </head>
   <body>
-    <h1>Environment: TEST</h1>
+    <h1>Environment: DEV3</h1>
 
     <table>
       <tr>
