--- a/test/hang.html
+++ b/test/hang.html
@@ -51,7 +51,7 @@
         apply.src = 'https://d2cxf26suf1qae.cloudfront.net/static/site/js/widget-client.js';
         var s = document.getElementsByTagName('script')[0];
         s.parentNode.insertBefore(apply, s);
-    })('https://test.paradox.ai', 'suwnzuwjuwwtlvahqcfc');
+    })('https://test.paradox.ai', 'gqbnxzkghxfnnmwveyzu');
 </script>
     
       <div id="content">
