--- a/mchire-stg/widget.html
+++ b/mchire-stg/widget.html
@@ -28,12 +28,11 @@
       </tr>
       <tr>
         <td>Company:</td>
-        <td>ParadoxVN - Hang dev2 Conversation
-</td>
+        <td>ParadoxVN-Hang mchire stg</td>
       </tr>
       <tr>
         <td>Widget name:</td>
-        <td>Hang Le Widget</td>
+        <td>Widget</td>
       </tr>
     </table>
     
