--- a/dev3/widget.html
+++ b/dev3/widget.html
@@ -51,7 +51,7 @@
         apply.src = 'https://d1fgvln1ai2fb8.cloudfront.net/static/site/js/widget-client.js';
         var s = document.getElementsByTagName('script')[0];
         s.parentNode.insertBefore(apply, s);
-    })('https://dev3.paradox.ai', 'gdhnkycmhtqrrdomzotw');
+    })('https://dev3.paradox.ai', 'pbdrfappndxuqlcdvqfn');
 </script>
     
       <div id="content">
