--- a/lts/af/widget.html
+++ b/lts/af/widget.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Hang Le" />
      </head>
   <body>
-    <h1>Environment: TEST</h1>
+    <h1>Environment: LTSSTG</h1>
 
     <table>
       <tr>
@@ -29,7 +29,7 @@
 
       <tr>
         <td>Company:</td>
-        <td>ParadoxVN-Hang Conversation</td>
+        <td>ParadoxVN-Hang AF</td>
       </tr>
       <tr>
         <td>Widget name:</td>
