--- a/test/Job/widget.html
+++ b/test/Job/widget.html
@@ -39,14 +39,8 @@
 
 
     <div class="job-info-items">
-            
-      <span class="job-location job-info">Flexible</span>
-      <span class="job-site job-info">Onsite</span>
-      <span class="job-ContractType job-info">Flexible contract (working abroad)</span>
-      <span class="job-type job-info">Full Time</span>
-      <span class="job-hours job-info">Summer 2025</span>
   
-      <span class="job-id job-info">131003</span> 
+      <span class="job-id job-info">11081128</span> 
         
     </div>
 
