--- a/test/Job/widget.html
+++ b/test/Job/widget.html
@@ -40,7 +40,7 @@
 
     <div class="job-info-items">
   
-      <span class="job-id job-info">16311846</span> 
+      <span class="job-id job-info">Anh1-20240304001</span> 
         
     </div>
     
