--- a/mchire-stg/widget.html
+++ b/mchire-stg/widget.html
@@ -67,7 +67,7 @@
           apply.src = 'https://d21jvwj1c73d2e.cloudfront.net/static/site/js/widget-client.js';
           var s = document.getElementsByTagName('script')[0];
           s.parentNode.insertBefore(apply, s);
-      })('https://stg.mchire.com', 'iagkfirkrqbfvmcsaqvm');
+      })('https://stg.mchire.com', 'rrdjfusgrgvucufwlmke');
   </script>
     
       <div id="content">
